test(integration): fix coverity build error